소캣프론트

--- a/Ralomok_V2_FrontEnd/.env
+++ b/Ralomok_V2_FrontEnd/.env
@@ -1,2 +1,5 @@
 # PJT Server URL
-BACKEND_SERVER_URL=http://localhost:80
+BACKEND_SERVER_URL=http://localhost:8080
+
+# socket URL
+BACKEND_SOCKET_URL=ws://localhost:8080/game
