fix: map detail

--- a/TATI/EnjoyTrip_FrontEnd_seoul_15/package.json
+++ b/TATI/EnjoyTrip_FrontEnd_seoul_15/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "dev": "vite --host 70.12.60.48 --port 80",
+        "dev": "vite --host localhost --port 5173",
         "build": "vite build",
         "preview": "vite preview",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
